--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p class="p1"><span class="Apple-converted-space">      </span>&lt;TITLE&gt;My first HTML document&lt;/TITLE&gt;</p>
 <p class="p1"><span class="Apple-converted-space">   </span>&lt;/HEAD&gt;</p>
 <p class="p1"><span class="Apple-converted-space">   </span>&lt;BODY&gt;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>&lt;P&gt;Hello world!</p>
+<p class="p1"><span class="Apple-converted-space">      </span>&lt;div class=“welcome”&gt;Hello world!&lt;/div&gt;</p>
 <p class="p1"><span class="Apple-converted-space">   </span>&lt;/BODY&gt;</p>
 <p class="p1">&lt;/HTML&gt;</p>
 </body>
