--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     </ul>
  
     <div class="tab-content">
-        <div id="tab1" class="tab active">
+        <div id="About Me" class="tab active">
             <p>Tab #1 content goes here!</p>
             <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis.</p>
         </div>
  
-        <div id="tab2" class="tab">
+        <div id="Education" class="tab">
             <p>Tab #2 content goes here!</p>
             <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis. In hac habitasse platea dictumst. Ut euismod tempus hendrerit. Morbi ut adipiscing nisi. Etiam rutrum sodales gravida! Aliquam tellus orci, iaculis vel.</p>
         </div>
  
-        <div id="tab3" class="tab">
+        <div id="Projects" class="tab">
             <p>Tab #3 content goes here!</p>
             <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum ri.</p>
         </div>
