--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="tab-content">
         <div id="About Me" class="tab active">
             <p>Tab #1 content goes here!</p>
-            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis.</p>
+            <p>Hi! I'm malay neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis.</p>
         </div>
  
         <div id="Education" class="tab">
