--- a/index.html
+++ b/index.html
@@ -2,35 +2,20 @@
 <html>
 <head> Hi there. Welcome to Malay's Homepage
 </head>
-<div class="tabs">
-    <ul class="tab-links">
-        <li class="active"><a href="#About Me">Tab #1</a></li>
-        <li><a href="#Education">Tab #2</a></li>
-        <li><a href="#Projects">Tab #3</a></li>
-        <li><a href="#tab4">Tab #4</a></li>
-    </ul>
- 
-    <div class="tab-content">
-        <div id="About Me" class="tab active">
-            <p>Tab #1 content goes here!</p>
-            <p>Hi! I'm malay neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis.</p>
-        </div>
- 
-        <div id="Education" class="tab">
-            <p>Tab #2 content goes here!</p>
-            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis. In hac habitasse platea dictumst. Ut euismod tempus hendrerit. Morbi ut adipiscing nisi. Etiam rutrum sodales gravida! Aliquam tellus orci, iaculis vel.</p>
-        </div>
- 
-        <div id="Projects" class="tab">
-            <p>Tab #3 content goes here!</p>
-            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum ri.</p>
-        </div>
- 
-        <div id="tab4" class="tab">
-            <p>Tab #4 content goes here!</p>
-            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis. In hac habitasse platea dictumst. Ut euismod tempus hendrerit. Morbi ut adipiscing nisi. Etiam rutrum sodales gravida! Aliquam tellus orci, iaculis vel.</p>
-        </div>
-    </div>
+<div id="header"> 
+
+<h1>Tabs</h1>
+<ul>
+	<li><a href="#">This</a></li>
+	<li id="selected"><a href="#">That</a></li>
+	<li><a href="#">The Other</a></li>
+	<li><a href="#">Banana</a></li>
+</ul>
+
+</div>
+
+<div id="content">
+	<p>Ispum schmipsum.</p>
 </div>
 
 <body>
