--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 <html>
 <head> Hi there. Welcome to Malay's Homepage
 </head>
-<div id="header"> 
+var homeSlides = $(".homeSlide");
+var $slideContent = $(".hsContainer");
+var slidesCount = $(homeSlides).length;
+var activeSlide = 1;
+         
+// Build HTML for Nav
+$("<div/>", {
+    "id" : "slideNav"
+}).append($("<ul>
+<li class="slideNavPrev">
+    <a class="disabled" href="#" title="Go to previous slide">
+        <span class="ico ico-up">↑</span>
+    </a>
+</li>
+<li>
+    <span id="activeSlide">'+activeSlide+'</span>/<span id="maxSlides">'+slidesCount+'</span>
+</li>
+<li class="slideNavNext">
+    <a href="#" title="Go to next slide">
+        <span class="ico ico-down">↓</span>
+    </a>
+</li>
+</ul>")).appendTo("body").delay(1200).fadeIn(duration);
 
-<h1>Tabs</h1>
-<ul>
-	<li><a href="#">This</a></li>
-	<li id="selected"><a href="#">That</a></li>
-	<li><a href="#">The Other</a></li>
-	<li><a href="#">Banana</a></li>
-</ul>
-
-</div>
-
-<div id="content">
-	<p>Ispum schmipsum.</p>
-</div>
 
 <body>
 </body>
