--- a/index.html
+++ b/index.html
@@ -1,5 +1,149 @@
 <!DOCTYPE html PUBLIC
 <html>
+<style>
+html
+{
+    overflow: scroll;
+}
+
+th
+{
+    left:700px;
+    top:300px;
+    position:fixed;
+}
+td.first_name_text
+{
+    left:700px;
+    top:330px;
+    position:fixed;
+    background-image:url(required-field.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+    padding-right:10px;
+}
+td.first_name_textbox
+{
+    left:854px;
+    top:330px;
+    position:fixed;
+}
+td.last_name_text
+{
+    left:700px;
+    top:378px;
+    position:fixed;
+    background-image:url(required-field.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+    padding-right:10px;
+}
+td.last_name_textbox
+{
+    left:854px;
+    top:378px;
+    position:fixed;
+}
+td.email_text
+{
+    left:700px;
+    top:426px;
+    position:fixed;
+    background-image:url(required-field.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+    padding-right:10px;
+}
+td.email_textbox
+{
+    left:854px;
+    top:426px;
+    position:fixed;
+}
+td.dob_text
+{
+    left:700px;
+    top:474px;
+    position:fixed;
+    background-image:url(required-field.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+    padding-right:10px;
+}
+td.dob_month_textbox
+{
+    left:824px;
+    top:474px;
+    position:fixed;
+}
+td.dob_day_textbox
+{
+    left:969px;
+    top:474px;
+    position:fixed;
+}
+td.dob_year_textbox
+{
+    left:1056px;
+    top:474px;
+    position:fixed;
+}
+td.sex_text
+{
+    left:700px;
+    top:510px;
+    position:fixed;
+    background-image:url(required-field.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+    padding-right:10px;
+}
+td.loginId_text
+{
+    left:700px;
+    top:550px;
+    position:fixed;
+    background-image:url(required-field.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+    padding-right:10px;
+}
+td.loginId_textbox
+{
+    left:790px;
+    top:550px;
+    position:fixed;
+}
+td.password_text
+{
+    left:700px;
+    top:580px;
+    position:fixed;
+    background-image:url(required-field.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+    padding-right:10px;
+}
+td.password_textbox
+{
+    left:790px;
+    top:570px;
+    position:fixed;
+}
+td.confirm_password_text
+{
+    left:790px;
+    top:570px;
+    position:fixed;
+    background-image:url(required-field.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+    padding-right:10px;
+}
+
+
+</style>
+
 <head> Hi there. Welcome to Malay's Homepage
 </head>
 
