--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html PUBLIC
 <html>
-
-
 <head> Hi there. Welcome to Malay's Homepage
 </head>
 
 
 
 <body>
+<div id="sidebar">
+        <div id="sidebar-content">
+            <div class="sidebar-name">Sarah Jiyun Kim</div>
+            <div class="sidebar-category">ABOUT</div>
+            <a href="index.html"><div class="sidebar-item">Home</div></a>
 </body>
 </html>
