--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="sidebar">
         <div id="sidebar-content">
-            <div class="sidebar-name">Sarah Jiyun Kim</div>
+            <div class="sidebar-name">Malay Patel</div>
             <div class="sidebar-category">ABOUT</div>
             <a href="index.html"><div class="sidebar-item">Home</div></a>
 </body>
