--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <div class="tabs">
     <ul class="tab-links">
-        <li class="active"><a href="#tab1">Tab #1</a></li>
+        <li class="active"><a href="#tab1">Education #1</a></li>
         <li><a href="#tab2">Tab #2</a></li>
         <li><a href="#tab3">Tab #3</a></li>
         <li><a href="#tab4">Tab #4</a></li>
