--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC
 <html>
-<head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> Hi there. Welcome to Malay's Homepage
+<head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> <link rel="stylesheet" type="text/css" href="charts.css" media="screen" /> Hi there. Welcome to Malay's Homepage
 </head>
 <div class="tabs">
     <ul class="tab-links">
