--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html PUBLIC
 <html>
-<head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> Hi there. Welcome to Malay's Homepage
+<head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> About I Malay Patel
 </head>
 <div class="tabs">
     <ul class="tab-links">
-        <li class="active"><a href="#tab1">About Me </a></li> <li> <a href="#tab2">Education</a></li> <li><a href="#tab3">Projects</a> </li> <li><a href="#tab4">Interests</a></li>
+        <li class="active"><a href="#tab1">About Me </a></li> 
+        <li> <a href="#tab2">Education</a></li> 
+        <li><a href="#tab3">Projects</a></li> 
+        <li><a href="#tab4">Interests</a></li>
     </ul>
  
     <div class="tab-content">
