--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 </head>
 <div class="tabs">
     <ul class="tab-links">
-        <li class="active"><a href="#">About Me </a></li> 
-        <li> <a href="#">Education</a></li> 
-        <li><a href="#">Projects</a></li> 
-        <li><a href="#">Interests</a></li>
+        <li class="active"><a href="#tab1">About Me </a></li> 
+        <li> <a href="#tab2">Education</a></li> 
+        <li><a href="#tab3">Projects</a></li> 
+        <li><a href="#tab4">Interests</a></li>
     </ul>
  
     <div class="tab-content">
