--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> About I Malay Patel
 </head>
 <div class="tabs">
+<STYLE>
+<!--
+a {text-decoration:none}
+//-->
+</STYLE>
     <ul class="tab-links">
         <li class="active"><a href="#tab1">About Me </a></li> 
         <li> <a href="#tab2">Education</a></li> 
