--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> About I Malay Patel
 </head>
 <div class="tabs">
+<!-- to take out underline everywhere (style section) -->
 <STYLE>
 <!--
 a {text-decoration:none}
