--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ a {text-decoration:none}
 //-->
 </STYLE>
     <ul class="tab-links">
-        <li class="active"><a href="#tab1">About Me </a></li> 
-        <li> <a href="#tab2">Education</a></li> 
-        <li><a href="#tab3">Projects</a></li> 
-        <li><a href="#tab4">Interests</a></li>
+        <li class="active"><a href="#About Me">About Me </a></li> 
+        <li> <a href="#Education">Education</a></li> 
+        <li><a href="#Projects">Projects</a></li> 
+        <li><a href="#Interest">Interests</a></li>
     </ul>
  
     <div class="tab-content">
