--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ a {text-decoration:none}
         <li class="active"><a href="#About Me">About Me </a></li> 
         <li> <a href="#Education">Education</a></li> 
         <li><a href="#Projects">Projects</a></li> 
-        <li><a href="#Interest">Interests</a></li>
+        <li><a href="#Interests">Interests</a></li>
     </ul>
  
     <div class="tab-content">
