--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> About I Malay Patel
 </head>
+<h1>Find a place to stay.</h1>
 <div class="tabs">
 <!-- to take out underline everywhere (style section) -->
 <STYLE>
