--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC
 <html>
-<head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> About I Malay Patel
+<head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> 
 </head>
-<h1>AboutI Malay Patel</h1>
+<h1>About I Malay Patel</h1>
 <div class="tabs">
 <!-- to take out underline everywhere (style section) -->
 <STYLE>
