--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 a {text-decoration:none}
 //-->
 </STYLE>
+.nav li {
+  display: inline;
+}
     <ul class="tab-links">
         <li class="active"><a href="#About Me">About Me </a></li> 
         <li> <a href="#Education">Education</a></li> 
