--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ a {text-decoration:none}
 
 <body>
 <div id="page-wrap">
+<img src="http://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.roadblogusa.com%2Fwp-content%2Fuploads%2F2011%2F09%2FEmpire-State-Building-HDR-dark-sky.jpg&imgrefurl=http%3A%2F%2Fwww.roadblogusa.com%2Fnew-york-new-york%2F&h=860&w=1290&tbnid=CBtQ_sTgUE7NSM%3A&zoom=1&docid=1gPQzQRGQWZC7M&ei=KMc5VLWbHIybyATH1YCoBw&tbm=isch&ved=0CBMQMygLMAs4kAM&iact=rc&uact=3&dur=1406&page=24&start=404&ndsp=19" />
     <!-- all websites HTML here -->
   </div>
 </body>
