--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a {text-decoration:none}
 
 <body>
 <div id="page-wrap">
-<img src="http://bit.ly/RhrMEn" />
+<img src="goo.gl/Lukn26" />
     <!-- all websites HTML here -->
   </div>
 </body>
