--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 a {text-decoration:none}
 //-->
 </STYLE>
-    <ul class="tab-links">
+<ul class="tab-links">
+    li {
+    display: inline; 
+    }
         <li class="active"><a href="#About Me">About Me </a></li> 
         <li> <a href="#Education">Education</a></li> 
         <li><a href="#Projects">Projects</a></li> 
@@ -43,7 +46,7 @@ a {text-decoration:none}
 
 <body>
 <div id="page-wrap">
-<img src="http://goo.gl/Lukn26" />
+
     <!-- all websites HTML here -->
   </div>
 </body>
