--- a/index.html
+++ b/index.html
@@ -5,15 +5,32 @@
 <h1>About I Malay Patel</h1>
 <div class="tabs">
 <!-- to take out underline everywhere (style section) -->
+
 <STYLE>
 <!--
 a {text-decoration:none}
+ul#menu {
+    padding: 0;
+}
+
+ul#menu li {
+    display: inline;
+}
+
+ul#menu li a {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 4px 4px 0 0;
+}
+
+ul#menu li a:hover {
+    background-color: orange;
+}
 //-->
 </STYLE>
-<ul class="tab-links">
-    li {
-    display: inline; 
-    }
+
         <li class="active"><a href="#About Me">About Me </a></li> 
         <li> <a href="#Education">Education</a></li> 
         <li><a href="#Projects">Projects</a></li> 
