--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <!-- to take out underline everywhere (style section) -->
 
 <STYLE>
-
+-<!--
+-a {text-decoration:none}
 </STYLE>
 
         <li class="active"><a href="#About Me">About Me </a></li> 
