--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <!-- to take out underline everywhere (style section) -->
 
 <STYLE>
--<!--
--a {text-decoration:none}
+ ul#active {
+ list-style-type: none;
+ }
 </STYLE>
 
         <li class="active"><a href="#About Me">About Me </a></li> 
