--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <!-- to take out underline everywhere (style section) -->
 
 <STYLE>
-
+<!--
+ a {text-decoration:none}
+ //-->
 </STYLE>
  ul#active {
  list-style-type: none;
