--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <li> <a href="#Education">Education</a></li> 
         <li><a href="#Projects">Projects</a></li> 
         <li><a href="#Interests">Interests</a></li>
-    </ul>
+    <ul style="list-style:none"> 
+<li>One</li> 
+<li>Two</li> 
+</ul>
  
     <div class="tab-content">
         <div id="About Me" class="tab active">
