--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <li> <a href="#Education">Education</a></li> 
         <li><a href="#Projects">Projects</a></li> 
         <li><a href="#Interests">Interests</a></li>
-    <ul style="list-style:none"> 
-     </ul>
+    li {list-style-type: none;}
  
     <div class="tab-content">
         <div id="About Me" class="tab active">
