--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <!--
  a {text-decoration:none}
  //-->
+ div.tab-content li {
+    list-style:none;
+    background-image:none;
+    background-repeat:none;
+    background-position:0; 
 </STYLE>
      li {list-style-type: none;}
         <li class="active"><a href="#About Me">About Me </a></li> 
