--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
     list-style:none;
     background-image:none;
     background-repeat:none;
-    background-position:0; 
+    background-position:0; }
+    ul
+{
+    list-style-type:none;
+    padding:0px;
+    margin:0px;
+}
+li
+{
+    background-image:url(sqpurple.gif);
+    background-repeat:no-repeat;
+    background-position:0px 5px; 
+    padding-left:14px;
+}
 </STYLE>
      li {list-style-type: none;}
         <li class="active"><a href="#About Me">About Me </a></li> 
