--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 <!--
  a {text-decoration:none}
 ---!>
+ul {
+    float: left;
+    width: 100%;
+    padding: 0;
+    margin :0;
+    list-style-type: none;
+}
+
+a {
+    float: left;
+    width: 6em;
+    text-decoration: none;
+    color: white;
+    background-color: purple;
+    padding: 0.2em 0.6em;
+    border-right: 1px solid white;
+}
+
+a:hover {background-color: #ff3300;}
+
+li {display: inline;}
 </STYLE>
     <ul> 
         <li class="active"><a href="#About Me">About Me </a></li> 
