--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@ ul {
 }
 
 a {
-    float: left;
-    width: 6em;
+    float: center;
+    width: 8em;
     text-decoration: none;
     color: white;
-    background-color: purple;
-    padding: 0.2em 0.6em;
+    background-color: blue;
+    padding: 1.0em 1.0em;
     border-right: 1px solid white;
 }
 
-a:hover {background-color: #ff3300;}
+a:hover {background-color: #ff3500;}
 
 li {display: inline;}
 </STYLE>
