--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
  a {text-decoration:none}
 ---!>
 ul {
-    float: left;
-    width: 100%;
+    float: center;
+    width: 300%;
     padding: 0;
     margin :0;
     list-style-type: none;
