--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  a {text-decoration:none}
 ---!>
 ul {
-    float: center;
-    width: 300%;
-    padding: 0;
-    margin :0;
+    float: left;
+    width: 100%;
+    padding: .5;
+    margin :1.5;
     list-style-type: none;
 }
 
@@ -23,7 +23,7 @@ a {
     width: 8em;
     text-decoration: none;
     color: white;
-    background-color: blue;
+    background-color: black;
     padding: 1.0em 1.0em;
     border-right: 1px solid white;
 }
