--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  a {text-decoration:none}
 ---!>
 ul {
-    float: left;
+    float: center;
     width: 100%;
     padding: .5;
     margin :1.5;
