--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC
 <html>
-<head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> 
+<head> <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> <h1>About I Malay Patel</h1>
 </head>
-<h1>About I Malay Patel</h1>
+
 <div class="tabs">
 <!-- to take out underline everywhere (style section) -->
 
